# esig

./: .clang-format  .gitignore  .gitmodules  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  LICENSE  MANIFEST.in  PKG-INFO  README.md  pyproject.toml  setup.cfg  setup.py
Linux/: README.md  (+2 more)
src/algebra/: CMakeLists.txt
src/algebra/include/esig/algebra/: algebra_base.h  algebra_bundle.h  algebra_bundle_impl.h  algebra_fwd.h  algebra_impl.h  algebra_info.h  algebra_traits.h  base.h  basis.h  borrowed_algebra_impl.h  coefficients.h  context.h  context_fwd.h  fallback_operations.h  free_tensor.h  free_tensor_impl.h  free_tensor_interface.h  iteration.h  lie.h  lie_interface.h  linear_operator.h  python_interface.h  shuffle_tensor.h  tensor_interface.h
src/algebra/src/: algebra_base.cpp  algebra_bundle.cpp  allocating_data_buffer.cpp  basis.cpp  basis_interface.cpp  basis_interface.h  basis_object.cpp  coefficient_proxies.cpp  coefficients.cpp  context.cpp  data_buffer.cpp  dense_data_access_iterator.cpp  dense_kv_iterator.h  dense_lie.cpp  dense_lie.h  dense_tensor.cpp  dense_tensor.h  fallback_context.cpp  fallback_context.h  fallback_maps.cpp  fallback_maps.h  fallback_maps_internal.h  free_tensor_interface_fused_default.cpp  free_tensor_wrapper.cpp  iteration.cpp  lie_interface_fused_default.cpp  lie_wrapper.cpp  lite_context.cpp  lite_context.h  rowed_data_buffer.cpp  shuffle_tensor.cpp  sparse_kv_iterator.h  sparse_lie.cpp  sparse_lie.h  sparse_mutable_reference.h  sparse_tensor.cpp  sparse_tensor.h  stream_out_helpers.cpp  vector_construction_data.cpp
src/algebra/src/detail/: converting_lie_iterator_adaptor.h
src/algebra/src/lie_basis/: hall_basis_map.cpp  hall_basis_map.h  hall_extension.h  hall_set.cpp  hall_set.h  lie_basis.cpp  lie_basis.h
src/algebra/src/py_algebra/: convert_buffer.cpp  convert_buffer.h  dtype_from.cpp  kwargs_parser.cpp  py_coefficient_wrapper.cpp  py_coefficients.cpp  py_coefficients.h  py_esig_algebra.cpp  py_free_tensor.cpp  py_free_tensor.h  py_free_tensor_iterator.cpp  py_iterator.cpp  py_iterator.h  py_keys.h  py_lie.cpp  py_lie.h  py_lie_iterator.cpp  py_lie_key.cpp  py_lie_key_iterator.cpp  py_lie_key_iterator.h  py_tensor_key.cpp  py_tensor_key_iterator.cpp  py_tensor_key_iterator.h
src/algebra/src/tensor_basis/: tensor_basis.cpp  tensor_basis.h
src/algebra/tests/: CMakeLists.txt  fixture_base.cpp  fixture_base.h  la_esig_equality_helper.h  mock_context.h  test_context.cpp  test_dense_lie.cpp  test_dense_tensor.cpp  test_lie.cpp  test_lie_basis.cpp  test_lie_interface.cpp  test_maps.cpp  test_sparse_lie.cpp  test_sparse_tensor.cpp  test_tensor.cpp  test_tensor_basis.cpp  test_tensor_interface.cpp
src/common/: CMakeLists.txt  __init__.py  tosig.py
src/common/include/esig/: implementation_types.h  intervals.h  key_scalar_array.h  owned_scalar_array.h  scalar.h  scalar_array.h  scalar_fwd.h  scalar_interface.h  scalar_pointer.h  scalar_stream.h  scalar_traits.h  scalar_type.h  scalars.h
src/common/src/: config.h.in  dyadic.cpp  dyadic_interval.cpp  interval_partition.cpp  intervals.cpp  real_interval.cpp  segmentation.cpp  segmentation.h  to_dyadic_intervals.cpp  tosig.cpp  tosig.h
src/common/src/py_common/: py_common.cpp  py_common.h  py_dyadic.cpp  py_dyadic_interval.cpp  py_intervals.cpp  py_intervals.h  py_real_interval.cpp  py_recombine.cpp  py_recombine.h
src/common/src/recombine/TestVec/: recombine_helper_fn.h  stdafx.h
src/common/src/scalars/: conversion_functions.cpp  double_scalar_type_holder.cpp  double_type.cpp  double_type.h  float_scalar_type_holder.cpp  float_type.cpp  float_type.h  floats.cpp  floats.h  key_scalar_array.cpp  owned_scalar_array.cpp  poly_ring_type_holder.cpp  poly_scalars.cpp  poly_scalars.h  rational_type.cpp  rational_type.h  ratonal_scalar_type_holder.cpp  scalar.cpp  scalar_array.cpp  scalar_interface.cpp  scalar_pointer.cpp  scalar_stream.cpp  scalar_type.cpp  standard_scalar_type.h  type_registry.cpp
src/common/tests/: CMakeLists.txt  scalar_array_tests.cpp  scalar_pointer_tests.cpp  scalar_tests.cpp  scalars_fixture.h  test_dyadic.cpp  test_dyadic_interval.cpp
src/libalgebra_context/: CMakeLists.txt
src/libalgebra_context/config/: default.json
src/libalgebra_context/src/: libalgebra_context.cpp  libalgebra_context_maker.cpp  libalgebra_context_maker.h
src/libalgebra_context/tests/: CMakeLists.txt  test_libalgebra_contexts_available.cpp
src/libalgebra_context/tools/: switch_builder.py
src/paths/: CMakeLists.txt
src/paths/src/: concatenate.cpp  concatenation_path.cpp  concatenation_path.h  dyadic_caching_layer.cpp  dynamically_generated_path.cpp  dynamically_generated_path.h  lie_increment_path.cpp  lie_increment_path.h  path.cpp  piecewise_lie_path.cpp  piecewise_lie_path.h  tick_path.cpp  tick_path.h
src/paths/src/py_paths/: kwargs_to_context.cpp  kwargs_to_context.h  kwargs_to_metadata.cpp  py_esig_paths.cpp  py_function_path.cpp  py_function_path.h  py_lie_increment_path.cpp  py_lie_increment_path.h  py_path.cpp  py_path.h  py_piecewise_lie_path.cpp  py_piecewise_lie_path.h  py_tick_path.cpp  py_tick_path.h  python_arguments.cpp  python_arguments.h
src/paths/tests/: CMakeLists.txt  RandomScalarsFixture.cpp  RandomScalarsFixture.h  lie_increment_path_tests.cpp  test_path_wrapper.cpp  test_tick_path.cpp
src/pyesig/: CMakeLists.txt  ctype_to_npy_dtype.cpp  ctype_to_npy_dtype.h  ctype_to_py_fmt.cpp  ctype_to_py_fmt.h  dyadic.cpp  dyadic.h  dyadic_interval.cpp  dyadic_interval.h  free_tensor.cpp  free_tensor.h  get_vector_construction_data.cpp  get_vector_construction_data.h  interval.cpp  interval.h  kwargs_to_path_metadata.cpp  kwargs_to_path_metadata.h  kwargs_to_vector_construction.cpp  kwargs_to_vector_construction.h  lie.cpp  lie.h  list_to_buffer.cpp  list_to_buffer.h  numpy.cpp  numpy.h  py_algebra.cpp  py_algebra.h  py_arg_to_ctype.cpp  py_arg_to_ctype.h  py_buffer_to_buffer.cpp  py_buffer_to_buffer.h  py_context.cpp  py_context.h  py_esig.cpp  py_esig.h  py_fmt_to_esig_fmt.cpp  py_fmt_to_esig_fmt.h  py_function_path.cpp  py_function_path.h  py_intervals.cpp  (+27 more)
(+155 files in other folders)
