[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "scikit-build",
    "cmake",
    "ninja; platform_system!='Windows'",
    "oldest-supported-numpy",
    "delvewheel; platform_system=='Windows'"
]
build-backend = "setuptools.build_meta"

test-require =  [ "pytest" ]
test-command = "pytest {project}/esig/tests"
before-test = "pip install numpy --prefer-binary"

[tool.cibuildwheel]
skip = ["*-musl*", "pp*", "*x86_64"]
build-verbosity = 1

[tool.cibuildwheel.windows]
repair-wheel-command = "delvewheel show {wheel} && delvewheel repair {wheel}"

[tool.cibuildwheel.macos]
before-all = "source $ONEAPI_SCRIPT"
#repair-wheel-command = ""

[tool.cibuildwheel.linux]
before-all = "bash build/install-deps-linux.sh"

[[tool.cibuildwheel.overrides]]
select = "*linux*i686*"
# Numpy does not build wheels for Python3.10+ on i686 architecture, so
# we can't really support this either.
skip = ["*cp31*"]