[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "scikit-build",
    "cmake",
    "ninja; platform_system!='Windows'",
    "oldest-supported-numpy",
    "delvewheel; platform_system=='Windows'"
]
build-backend = "setuptools.build_meta"


[tool.cibuildwheel]
skip = ["*-musl*", "pp*", "cp31*-*linux_i686"]
build = ["cp310*"]
build-verbosity = 1

test-requires = ["pytest"]
test-command = "pytest {project}/esig/tests"
before-test = "pip install numpy --prefer-binary"

[tool.cibuildwheel.windows]
repair-wheel-command = "delvewheel show {wheel} && delvewheel repair {wheel}"

[tool.cibuildwheel.macos]
before-all = "source $ONEAPI_SCRIPT"
#repair-wheel-command = ""

[tool.cibuildwheel.linux]
before-all = "bash build/install-deps-linux.sh"
